fix url checker
